# qtlocation_qml_cmake_example

./: CMakeLists.txt  main.cpp  main.qml
